--- a/feedcmu/src/App.css
+++ b/feedcmu/src/App.css
@@ -28,10 +28,27 @@
   color: #61dafb;
 }
 
+#form {
+  display: flex;
+}
+
+#name_block {
+  display: flex;
+}
+
+#building_block {
+  display: flex;
+}
+
+#room_number_block {
+  display: flex;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
