--- a/feedcmu/src/App.css
+++ b/feedcmu/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e0ddcf;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #2d232e;
 }
 
 .App-link {
@@ -42,6 +42,11 @@
 
 #room_number_block {
   display: flex;
+}
+
+#building_select {
+  /* background-color: #886889; */
+  color: #ea00ff;
 }
 
 @keyframes App-logo-spin {
